<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                tools:context="com.jingcai.jc_11x5.ui.activity.RegisterActivity">

    <include
            android:id="@+id/layout_title"
            layout="@layout/page_title_bar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginTop="50dp"
            android:layout_marginRight="@dimen/margin_15"
            android:orientation="vertical">

        <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:background="@drawable/bt_bg_up"
                android:drawableLeft="@mipmap/ic_login_user"
                android:drawablePadding="@dimen/margin_15"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/divider"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/et_phone_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_45"
                    android:background="@drawable/bt_bg_mid"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="@dimen/margin_15"
                    android:ems="10"
                    android:hint="@string/hint_yzm"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_14"/>

            <Button
                    android:id="@+id/et_get_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="-92dp"
                    android:background="#fc8d3b"
                    android:text="获取验证码"
                    android:textColor="@color/white"/>
        </LinearLayout>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/divider"/>

        <EditText
                android:id="@+id/et_nick_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:background="@drawable/bt_bg_mid"
                android:drawableLeft="@mipmap/phone"
                android:drawablePadding="@dimen/margin_15"
                android:ems="10"
                android:hint="@string/hint_nc"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/divider"/>

        <EditText
                android:id="@+id/et_share_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:background="@drawable/bt_bg_mid"
                android:drawableLeft="@mipmap/ic_login_user"
                android:drawablePadding="@dimen/margin_15"
                android:ems="10"
                android:hint="请输入推广号"
                android:inputType="number"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/divider"/>

        <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:background="@drawable/bt_bg_mid"
                android:drawableLeft="@mipmap/ic_login_pwd"
                android:drawablePadding="@dimen/margin_15"
                android:ems="10"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/divider"/>

        <EditText
                android:id="@+id/et_qr_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:background="@drawable/bt_bg_down"
                android:drawableLeft="@mipmap/ic_login_pwd"
                android:drawablePadding="@dimen/margin_15"
                android:hint="@string/hint_qrpwd"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:gravity="center">

            <CheckBox
                    android:id="@+id/cb_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@color/alpha"
                    android:button="@drawable/checkbox_style"
                    android:text="@string/text_tongyitiaokuan"
                    android:textColor="@color/gray"/>

            <TextView
                    android:id="@+id/tv_fuwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginBottom="@dimen/margin_2"
                    android:autoLink="all"
                    android:text="@string/text_fuwutiaokuan"
                    android:textColor="#59aaec"/>

        </RelativeLayout>

        <Button
                android:id="@+id/btn_zhuce"
                style="@style/button_common_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/bt_zhuce"/>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:layout_marginTop="@dimen/margin_15"
                android:orientation="horizontal">

            <!--<LinearLayout
                    android:id="@+id/rg_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/margin_8"
                        android:src="@mipmap/qq"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/rg_qq"
                        android:text="@string/btn_kefu"
                        android:textSize="@dimen/text_size_14"/>
            </LinearLayout>-->

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/tv_denglu"
                    android:text="@string/register_text"/>

            <TextView
                    android:id="@+id/tv_denglu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:text="@string/register_denglu"
                    android:textColor="#59aaec"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
