<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.jingcai.jc_11x5.ui.activity.RegisterActivity">

    <include
        android:id="@+id/layout_title"
        layout="@layout/page_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:orientation="vertical"
        android:layout_below="@+id/layout_title"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/wj_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:background="@drawable/bt_bg_up"
            android:drawablePadding="@dimen/margin_15"
            android:hint="@string/hint_phone"
            android:drawableLeft="@mipmap/ic_login_user"
            android:ems="10"
            android:inputType="number"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/wj_phone_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_45"
                android:drawablePadding="@dimen/margin_15"
                android:hint="@string/hint_yzm"
                android:ems="10"
                android:background="@drawable/bt_bg_mid"
                android:drawableLeft="@mipmap/phone"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/wj_get_msg"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="-92dp"
                android:background="#fc8d3b"
                android:textColor="@color/white"
                android:text="获取验证码"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <EditText
            android:id="@+id/wj_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:drawablePadding="@dimen/margin_15"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/bt_bg_mid"
            android:drawableLeft="@mipmap/ic_login_pwd"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <EditText
            android:id="@+id/wj_qr_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:background="@drawable/bt_bg_down"
            android:hint="@string/hint_qrpwd"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/margin_15"
            android:drawableLeft="@mipmap/ic_login_pwd"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/btn_wangji"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/bt_tj"
            style="@style/button_common_style" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:layout_marginTop="@dimen/margin_15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wj_denglu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_denglu"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textColor="#59aaec"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
