<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.jingcai.jc_11x5.ui.activity.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/text_orange"/>

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:src="@mipmap/ic_jc"
        android:layout_marginTop="@dimen/margin_35"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:orientation="vertical"
        android:layout_below="@+id/iv_banner"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:drawablePadding="@dimen/margin_15"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:background="@drawable/bt_bg_up"
            android:drawableLeft="@mipmap/ic_login_user"
            android:ems="10"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:inputType="textPassword"
            android:background="@drawable/bt_bg_mid"
            android:drawablePadding="@dimen/margin_15"
            android:drawableLeft="@mipmap/ic_login_pwd"
            android:hint="@string/hint_pwd"
            android:ems="10"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/divider" />

        <TextView
            android:id="@+id/tv_cai"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:background="@drawable/bt_bg_down"
            android:gravity="left|center"
            android:drawablePadding="@dimen/margin_15"
            android:drawableRight="@mipmap/downarrow"
            android:drawableLeft="@mipmap/ic_login_cai"
            android:layout_marginBottom="@dimen/margin_5"
            android:textSize="@dimen/text_size_14"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:text="@string/bt_login"
            android:layout_marginTop="@dimen/margin_10"
            style="@style/button_common_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_45"
            android:layout_marginTop="@dimen/margin_15"
            android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_qq"
                    android:layout_centerVertical="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_8"
                android:src="@mipmap/qq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/iv_qq"
                android:textSize="@dimen/text_size_14"
                android:text="@string/btn_kefu"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_zhuce"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/tv_wjmm"
                android:gravity="center"
                android:text="@string/login_zhuce"
                android:layout_marginRight="@dimen/margin_5"
                android:textColor="#59aaec"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/tv_wjmm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_orange"
                android:textSize="@dimen/text_size_16"
                android:text="忘记密码"/>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
