<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/layout_main_tabbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/main_indicator_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_yljk"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/selector_tab_home" />

            <TextView
                android:id="@+id/tv_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_yljk"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/menu_bottom_home"
                android:textColor="@drawable/textview_selector"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_indicator_zst"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bjsz"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/selector_tab_zst" />

            <TextView
                android:id="@+id/tv_btjz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_bjsz"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/menu_bottom_zst"
                android:textColor="@drawable/textview_selector"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_indicator_r5ss"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_btjs"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/selector_tab_r5ss" />

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_btjs"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/menu_bottom_r5ss"
                android:textColor="@drawable/textview_selector"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_indicator_fafb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_kjzs"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/selector_tab_fafb" />

            <TextView
                android:id="@+id/tv_kjzs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_kjzs"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/menu_bottom_fafb"
                android:textColor="@drawable/textview_selector"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_indicator_grzx"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_set"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/menu_bottom_grzx"
                android:textColor="@drawable/textview_selector"
                android:textSize="12sp"  />

            <ImageView
                android:id="@+id/iv_set"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/selector_tab_grzx"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                    android:id="@+id/iv_get"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:src="@mipmap/icon_grzx_xx"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>
</FrameLayout>